--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
 
         <div id="attribution-section" style="text-align: center; margin-top: 40px; font-size: 0.85rem; color: #777;">
-            <p>Weather data provided by MET.no</p>
+            <p>Weather data provided by MET.no. Weather data may not load correctly in non-Chromium based browsers.</p>
         </div>
         </div>
 
